--- a/README
+++ b/README
@@ -11,5 +11,6 @@ The store GAEsessions has to be pasted or imported into werkzeug.contrib.session
 
 After that go to your app and use it like I have used it in the __init__.py file . The init.py file contains the code written by hewew(on Flask mailing list) and Armin(the creator of flask)
 
+Take care of the below
 1.check for the presence of sessions using sessions.get('attributeorwhatever'), else a keyerror will be raised if the attribute is not present
 
